--- a/Source/Sass/ux2/_ux2_content_widget_solutions.scss
+++ b/Source/Sass/ux2/_ux2_content_widget_solutions.scss
@@ -199,7 +199,7 @@
 
               &.recommended {
                 hr {
-                  border-color: $ux2-sage-green !important;
+                  border-color: $ux2-green !important;
                 }
 
                 .panel {
