--- a/Source/Sass/ux2/_ux2_side_nav.scss
+++ b/Source/Sass/ux2/_ux2_side_nav.scss
@@ -1,17 +1,24 @@
 ﻿@import '_ux2_colours';
 
+@mixin stretch-fit {
+  position: absolute;
+  margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
 .no-scroll {
   overflow: hidden;
 }
 
 #ux2_side_nav {
-  @include linear-v-gradient(rgba($ux2-slate-light, 1.0), rgba($ux2-slate-dark, 1.0));
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
+  @include linear-v-gradient(rgba($ux2-slate-light, 1.0), rgba($ux2-slate, 1.0));
+  @include stretch-fit;
   z-index: 9999;
+  margin:0;
+  position: fixed;
   overflow: hidden;
   height: 0;
   transition: 0.5s;
@@ -27,6 +34,7 @@
     color: $brand-white;
     font-family: AdelleSansSAGE;
     font-size: 14px;
+    height: 100%;
 
     a {
       color: $brand-white;
@@ -75,6 +83,9 @@
     }
 
     .body {
+      @include stretch-fit;
+      height: 235px;
+
       .top {
         display: none;
       }
@@ -107,7 +118,7 @@
 
         &:after {
           content: "";
-          border-left: 2px solid $ux2-slate-darker;
+          border-left: 2px solid $ux2-slate-dark;
           position: absolute;
           left: 0;
           top: 0;
@@ -127,7 +138,7 @@
           padding-top: 7px;
           border-radius: 50%;
           background: #f5f5f5;
-          color: $ux2-slate-dark;
+          color: $ux2-slate;
         }
 
         .copyright {
@@ -145,20 +156,18 @@
 
 @media(max-width: 991px) {
   #ux2_side_nav {
-    @include linear-v-gradient(rgba($ux2-slate-dark, 1.0), rgba($ux2-slate-light, 1.0));
+    @include linear-v-gradient(rgba($ux2-slate, 1.0), rgba($ux2-slate-light, 1.0));
     height: 100%;
     width: 0;
 
     #ux2_side_nav_content {
-      font-family: AdelleSAGE;
-
       ul li a {
         display: block;
         padding: 6px 52px;
       }
 
       .header {
-        border-bottom: 1px solid $ux2-sage-green;
+        border-bottom: 1px solid $ux2-azul-light;
 
         .section {
           display: none;
@@ -169,6 +178,8 @@
         max-width: 320px;
         padding: 0;
         margin: 0;
+        position: static;
+        height: auto;
 
         .top {
           padding: 0;
@@ -190,22 +201,20 @@
               padding: 6px 52px;
               margin: 0;
               cursor: pointer;
-              position:relative;
+              position: relative;
+              font-size: 18px;
 
-              &:after{
-                content:"";
-                display:block;
-                border-top: 2px solid $ux2-sage-green;
-                border-right: 2px solid $ux2-sage-green;
+              &:after {
+                @include stretch-fit;
+
+                content: "";
+                display: block;
+                border-top: 2px solid $ux2-azul-light;
+                border-right: 2px solid $ux2-azul-light;
                 transform: rotate(45deg);
-                position: absolute;
                 width: 13px;
                 height: 13px;
-                top: 0px;
-                left: 0px;
-                bottom: 0;
-                right: 0;
-                margin:auto 0;
+                margin: auto 24px;
               }
             }
 
@@ -227,12 +236,18 @@
               opacity: 0;
               overflow: hidden;
               transition: 0.5s;
+              margin: 0;
+
+              > li a {
+                padding-left: 65px;
+              }
             }
 
             &.open {
               > ul {
                 opacity: 1;
-                height: 100%;
+                height: auto;
+                margin-bottom: 15px;
               }
             }
           }
@@ -240,7 +255,7 @@
 
         .social {
           padding: 0;
-          font-size: 18px;
+          font-size: 16px;
 
           &:after {
             border: none;
@@ -259,7 +274,7 @@
                 left: 0;
                 top: 0;
                 width: 165px;
-                border-top: 2px solid $ux2-sage-green;
+                border-top: 2px solid $ux2-azul-light;
               }
             }
 
@@ -272,7 +287,7 @@
                 left: 0;
                 bottom: 0;
                 width: 165px;
-                border-bottom: 2px solid $ux2-sage-green;
+                border-bottom: 2px solid $ux2-azul-light;
               }
             }
           }
