--- a/Source/Sass/sage.scss
+++ b/Source/Sass/sage.scss
@@ -80,6 +80,7 @@
 
 /* ux2 overrides*/
 @import './ux2/_ux2_colours';
+@import './ux2/_ux2_colour_classes';
 @import './ux2/_ux2_header_nav';
 @import './ux2/_ux2_side_nav';
 @import './ux2/_ux2_content_widget_solutions';
