--- a/Source/Sass/ux2/_ux2_side_nav.scss
+++ b/Source/Sass/ux2/_ux2_side_nav.scss
@@ -1,4 +1,5 @@
-﻿@import '_ux2_colours';
+﻿@import '../partials/sage_bootstrap_variables';
+@import '_ux2_colours';
 
 @mixin stretch-fit {
   position: absolute;
@@ -17,10 +18,10 @@
   @include linear-v-gradient(rgba($ux2-slate-light, 1.0), rgba($ux2-slate, 1.0));
   @include stretch-fit;
   z-index: 9999;
-  margin:0;
   position: fixed;
   overflow: hidden;
   height: 0;
+  margin: 0;
   transition: 0.5s;
 
   &.open {
@@ -154,7 +155,13 @@
   }
 }
 
-@media(max-width: 991px) {
+@media(min-width: $screen-md-min) and (max-height: 440px) {
+  #ux2_side_nav #ux2_side_nav_content .body {
+    position:static;
+  }
+}
+
+@media(max-width: $screen-sm-max) {
   #ux2_side_nav {
     @include linear-v-gradient(rgba($ux2-slate, 1.0), rgba($ux2-slate-light, 1.0));
     height: 100%;
