--- a/Source/Sass/sage.scss
+++ b/Source/Sass/sage.scss
@@ -83,4 +83,5 @@
 @import './ux2/_ux2_colour_classes';
 @import './ux2/_ux2_header_nav';
 @import './ux2/_ux2_side_nav';
+@import './ux2/_ux2_content_widget_explore';
 @import './ux2/_ux2_content_widget_solutions';
