--- a/Source/Sass/ux2/_ux2_content_widget_solutions.scss
+++ b/Source/Sass/ux2/_ux2_content_widget_solutions.scss
@@ -1,5 +1,4 @@
-﻿/*Main Site Sass*/
-@import '../partials/_common_mixins';
+﻿@import '../partials/_common_mixins';
 @import '../partials/_common_colours';
 @import '../partials/_common_variables';
 @import '../partials/_sage_bootstrap_variables';
