Implementing free trial landing page

--- a/Source/Sass/sage.scss
+++ b/Source/Sass/sage.scss
@@ -85,3 +85,4 @@
 @import './ux2/_ux2_side_nav';
 @import './ux2/_ux2_content_widget_explore';
 @import './ux2/_ux2_content_widget_solutions';
+@import './ux2/_ux2_content_widget_trial';
