--- a/Source/Sass/ux2/_ux2_side_nav.scss
+++ b/Source/Sass/ux2/_ux2_side_nav.scss
@@ -1,4 +1,5 @@
 ﻿@import '../partials/sage_bootstrap_variables';
+@import '../partials/common_mixins';
 @import '_ux2_colours';
 
 @mixin stretch-fit {
