Added sticky header to sage one page + supporting JS

--- a/Source/Sass/sage.scss
+++ b/Source/Sass/sage.scss
@@ -86,3 +86,4 @@
 @import './ux2/_ux2_content_widget_explore';
 @import './ux2/_ux2_content_widget_solutions';
 @import './ux2/_ux2_content_widget_trial';
+@import './ux2/_ux2_content_widget_sticky_header';
