--- a/Source/Sass/ux2/_ux2_content_widget_sticky_header.scss
+++ b/Source/Sass/ux2/_ux2_content_widget_sticky_header.scss
@@ -20,6 +20,10 @@
     .title {
       line-height: 50px;
       font-weight: bold;
+
+      .sticky-header-close{
+        margin: 10px 28px 10px 22px;
+      }
     }
 
     .buttons {
