--- a/Source/Sass/ux2/_ux2_content_widget_sticky_header.scss
+++ b/Source/Sass/ux2/_ux2_content_widget_sticky_header.scss
@@ -17,13 +17,14 @@
     z-index: 9998;
     color: $ux2-white;
 
+    .sticky-header-close {
+      margin: 10px 28px 10px 22px;
+      display: inline-block;
+    }
+
     .title {
       line-height: 50px;
       font-weight: bold;
-
-      .sticky-header-close{
-        margin: 10px 28px 10px 22px;
-      }
     }
 
     .buttons {
@@ -39,9 +40,32 @@
         color: $ux2-white;
         border-color: $ux2-white;
 
-        &.inverse{
+        &.inverse {
           color: $ux2-fuchsia;
           border-color: $ux2-fuchsia;
+        }
+      }
+    }
+  }
+}
+
+@media(max-width: $screen-sm-max) {
+  .sticky-header {
+    .sticky-header-inner {
+      .buttons {
+        .button-pink-block {
+          width: 130px;
+          padding-left: 10px;
+          margin-left: 14px;
+
+          &:before {
+            width: 14px;
+          }
+
+          &:after {
+            width: 9px;
+            height: 9px;
+          }
         }
       }
     }
@@ -53,11 +77,16 @@
     height: 60px;
 
     .sticky-header-inner {
+      .sticky-header-close {
+        margin: 15px 0 0;
+      }
+
+
       .title {
         font-size: 12px;
         line-height: normal;
         text-align: center;
-        margin-top:2px;
+        margin-top: 2px;
       }
 
       .buttons {
@@ -66,17 +95,19 @@
         line-height: normal;
 
         .button-pink-block {
-          padding: 1px 0px 1px 15px;
-          width: 120px;
-          margin-left: 20px;
+          padding: 1px 0px 1px 10px;
+          width: 112px;
+          margin-left: 10px;
 
           &:before {
             width: 14px;
+            right: 12px;
           }
 
           &:after {
             width: 9px;
             height: 9px;
+            right: 12px;
           }
         }
       }
