--- a/Source/Sass/ux2/_ux2_content_widget_sticky_header.scss
+++ b/Source/Sass/ux2/_ux2_content_widget_sticky_header.scss
@@ -7,6 +7,10 @@
   height: 50px;
   position: relative;
 
+  &.open{
+    display:block;
+  }
+
   .sticky-header-inner {
     @include linear-h-gradient(rgba($ux2-fuchsia-dark, 1.0), rgba($ux2-fuchsia, 1.0));
     position: fixed;
@@ -80,7 +84,6 @@
       .sticky-header-close {
         margin: 15px 0 0;
       }
-
 
       .title {
         font-size: 12px;
